--- a/app/views/application/_html_head.html.erb
+++ b/app/views/application/_html_head.html.erb
@@ -4,7 +4,10 @@
 <%= csp_meta_tag %>
 
 <%#bootswatch-slate.min.css   chart_modal.css   chart_modal.css.map   oho.css%>
-<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+<%= stylesheet_link_tag "bootswatch-darkly.min", "data-turbo-track": "reload" %>
+<%= stylesheet_link_tag "bootstrap-icons", "data-turbo-track": "reload" %>
+<%= stylesheet_link_tag "rails_bootstrap-forms", "data-turbo-track": "reload" %>
+<%= stylesheet_link_tag "chart_modal", "data-turbo-track": "reload" %>
 <%= stylesheet_link_tag "oho", "data-turbo-track": "reload" %>
 <%= javascript_importmap_tags %>
 
