--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
 <section class="container mt-5">
-  <%= link_to "Royalties", royalties_path, class: "btn btn-primary btn-lg" %>
+  <div class="d-flex align-items-center">
+  <%= image_tag("oho-navbar.png") %>
+
+  <div>
+  <h4>Future Home of an</h4>
+  <h2>Amazing Dashboard</h2>
+  </div>
+  </div>
 </section>
