--- a/app/views/application/_html_head.html.erb
+++ b/app/views/application/_html_head.html.erb
@@ -24,7 +24,7 @@
 <meta name="theme-color" content="#ffffff">
 
 <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+<%#<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>%>
 
 <script src="https://www.gstatic.com/charts/loader.js"></script>
 
