--- a/app/views/creators/sales/chart.html.erb
+++ b/app/views/creators/sales/chart.html.erb
@@ -19,6 +19,7 @@
     <div class="card-body">
       <%= line_chart(
         @chart_data,
+        theme: "dark",
         width: "90%",
         height: "90%",
       ) %>
