prior to solid queue experiment

--- a/app/views/application/_top_menu.html.erb
+++ b/app/views/application/_top_menu.html.erb
@@ -4,8 +4,7 @@
   </li>
 
   <li class="nav-item me-3">
-    <%#<%= link_to("Royalties", royalties_path, class: "nav-link") %>
-    <span class="nav-link">Royalties (tba)</span>
+    <%= link_to("Royalties", royalties_root_path, class: "nav-link")  %>
   </li>
 
   <li class="nav-item me-3">
