--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-primary mb-5" data-bs-theme="dark">
   <div class="container-fluid">
     <div>
       <%= link_to(root_path, class: "navbar-brand") do
