get import for lp working locally

--- a/app/views/royalties/lp/statements/index.html.erb
+++ b/app/views/royalties/lp/statements/index.html.erb
@@ -15,15 +15,15 @@
 
 <%= turbo_stream_from "@statements" %>
 
-<table class="table table-striped">
+<table class="table ">
   <thead>
     <tr>
+      <th> Report period </th>
       <th> Stmt date </th>
+      <th> Stmt Total </th>
+      <th class="border-end"> Status </th>
       <th> Uploaded </th>
       <th> Imported </th>
-      <th> Status </th>
-      <th> Period </th>
-      <th> STMT Total </th>
       <th> Uploaded file </th>
       <th></th>
     </tr>
