--- a/app/views/royalties/lp/statements/_statement.html.erb
+++ b/app/views/royalties/lp/statements/_statement.html.erb
@@ -2,7 +2,19 @@
 
 <tr id="<%= dom_id statement %>" class="align-middle">
   <td>
+    <%= statement.report_period %>
+  </td>
+
+  <td>
     <%= statement.date_on_report&.strftime("%Y-%m") %>
+  </td>
+
+  <td>
+    <%= number_to_currency(statement.statement_total) if statement.statement_total.present? %>
+  </td>
+
+  <td class="border-end">
+    <%= statement.status %>
   </td>
 
   <td title="<%= statement.upload_wrapper.uploaded_at&.to_fs(:oho_dt) %>">
@@ -11,7 +23,7 @@
 
   <td title="<%= statement.imported_at&.to_fs(:oho_dt) %>">
     <% if statement.imported_at.present? %>
-      <%= statement.imported_at&.to_fs(:oho_md) %>
+      <%= statement.imported_at&.strftime("%Y-%m-%d") %>
     <% elsif statement.status == LpStatement::STATUS_UPLOADED %>
         <%= button_to 'Import now',
                   import_royalties_lp_statement_path(statement),
@@ -20,14 +32,6 @@
                   data: { "turbo-method": :put, turbo_confirm: 'This permanently adds royalty information to PIP. Continue? ' }
                  %>
     <% end %>
-  </td>
-
-  <td>
-    <%= statement.status %>
-  </td>
-
-  <td>
-    <%= number_to_currency(statement.statement_total) if statement.statement_total.present? %>
   </td>
 
   <td>
@@ -47,12 +51,12 @@
                  ) if statement.imported_at.blank? %>
   </td>
 </tr>
-<% if statement.upload_wrapper.status_message.present? %>
+<% if statement.status_message.present? %>
   <tr class="table-warning">
     <td class="table-danger align-middle" colspan="2">Error on previous row</td>
     <td colspan="6" class="">
       <span class="text-dark">
-        <%= statement.upload_wrapper.status_message.gsub(/\n/, "<br/>").html_safe %>
+        <%= statement.status_message.gsub(/\n/, "<br/>").html_safe %>
       </span>
     </td>
   </tr>
