get basic IPS srtuff reworking following reeorg

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,8 +1,14 @@
-<nav class="navbar navbar-expand-lg bg-primary mb-5" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <div>
       <%= link_to(root_path, class: "navbar-brand") do
-        image_tag("oho-navbar.png")
+        group = if Current.user
+                  Current.user.admin? ? "Admin" : "Creator"
+                else
+                  ""
+                end
+        tag.span("Pragmatic ", class: "display-6 mb-0", style: "color: #EFE7CE") +
+        tag.span(group, class: "display-6 mb-0", style: "color: #FFF7DE")
       end %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
