--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,4 +1,5 @@
-    <header>
+    <header class="container-fluid  bg-primary mb-5" data-bs-theme="dark"">
+      <div class="container">
       <%= render partial: "navbar" %>
       <% if notice.present? %>
         <div role="alert" class="alert alert-success" id="notice">
@@ -10,5 +11,6 @@
           <%= alert %>
         </div>
       <% end %>
+      </div>
     </header>
 
