--- a/app/views/application/_logged_in_nav.html.erb
+++ b/app/views/application/_logged_in_nav.html.erb
@@ -18,10 +18,10 @@
 
 
 <div class="d-flex flex-column items-center">
-  <div class="mb-2 fs-5 align-self-center"><%= Current.user.email %></div>
+  <div class="mb-2 fs-5 text-secondary align-self-center"><%= Current.user.email %></div>
   <div class="d-flex">
-    <%= link_to "Change password", edit_password_url(Current.user.password_reset_token), class: "btn btn-sm btn-secondary p-2 mr-2" %>
-    <%= button_to "Log out", session_path, method: :delete, class: "btn btn-sm btn-warning p-2"%>
+    <%= link_to "Change password", edit_password_url(Current.user.password_reset_token), class: "btn btn-sm btn-secondary p-2 rounded-0 rounded-start border-0 border-end border-wqrning-subtle" %>
+    <%= button_to "Log out", session_path, method: :delete, class: "btn btn-sm btn-warning p-2 rounded-0 rounded-end"%>
   </div>
 
 </div>
