first revenue line upload

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -7,8 +7,8 @@
                 else
                   ""
                 end
-        tag.span("Pragmatic ", class: "display-6 mb-0", style: "color: #EFE7CE") +
-        tag.span(group, class: "display-6 mb-0", style: "color: #FFF7DE")
+        tag.span("Pragmatic ", class: "display-6 mb-0", style: "color: #E2DCC2") +
+        tag.span(group, class: "display-6 mb-0", style: "color: #FFF7EE")
       end %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
