--- a/app/views/royalties/ips/statements/show.html.erb
+++ b/app/views/royalties/ips/statements/show.html.erb
@@ -26,8 +26,10 @@ def charge_factor(item)
   end
 end
   %>
+Error: <%= @statement.status_message %>
 
-<h1>IPS Details</h1>
+
+<h1>IPS Statement</h1>
 
 <h4 class="text-secondary mt-3">Pragmatic Programmers LLC</h4>
 <h5 class="text-secondary">Client Statement</h5>
