--- a/app/views/royalties/ips/statements/detail.html.erb
+++ b/app/views/royalties/ips/statements/detail.html.erb
@@ -47,7 +47,7 @@
     </tr>
   </thead>
   <tbody>
-    <%= render partial: "revenue_line", collection: @detail.ips_revenue_lines, as: :line %>
+    <%= render partial: "detail_line", collection: @detail.ips_detail_lines, as: :line %>
   </tbody>
 
 </table>
