--- a/app/views/royalties/ips/statements/index.html.erb
+++ b/app/views/royalties/ips/statements/index.html.erb
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<%= turbo_stream_from "uploads" %>
+<%= turbo_stream_from "ips-royalty-index" %>
 
 <table class="table table-striped">
   <thead>
