--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,5 @@
     <header class="container-fluid  bg-primary mb-5" data-bs-theme="dark"">
-      <div class="container">
+      <div class="container px-0">
       <%= render partial: "navbar" %>
       <% if notice.present? %>
         <div role="alert" class="alert alert-success" id="notice">
