--- a/app/views/royalties/lp/statements/_statement.html.erb
+++ b/app/views/royalties/lp/statements/_statement.html.erb
@@ -51,10 +51,18 @@
                  ) if statement.imported_at.blank? %>
   </td>
 </tr>
-<% if statement.status_message.present? %>
+<% errors = OhoErrors.for(statement)
+fail
+  if unless errors.empty? %>
   <tr class="table-warning">
     <td class="table-danger align-middle" colspan="2">Error on previous row</td>
     <td colspan="6" class="">
+      <ul>
+        <% errors.each do |error| %>
+          <li>
+            <%= error.message %>
+          </li>
+          </ul>
       <span class="text-dark">
         <%= statement.status_message.gsub(/\n/, "<br/>").html_safe %>
       </span>
