--- a/app/views/royalties/ips/statements/show.html.erb
+++ b/app/views/royalties/ips/statements/show.html.erb
@@ -4,7 +4,6 @@
       "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
     ].join(",")
   %>
-<% content_for :title, "IPS Statement #{@statement.month_ending.strftime("%B %d %Y")}" %>
 <%
     def charge_basis(item)
       if item.basis == "unit"
@@ -27,63 +26,27 @@ def charge_factor(item)
 end
   %>
 
+<% content_for :title, "IPS Statement #{@statement.month_ending.strftime("%B %d %Y")}" %>
+
 <%= turbo_stream_from dom_id(@statement, :show) %>
 <%= turbo_stream_from dom_id(@statement, :errors) %>
 
-<h1>IPS Statement</h1>
+<div class="d-flex justify-content-between gap-5">
+  <div>
+    <h1>IPS Statement</h1>
 
-<h4 class="text-secondary mt-3">Pragmatic Programmers LLC</h4>
-<h5 class="text-secondary">Client Statement</h5>
-<h5 class="mb-4"><span><span class="text-secondary">Month ending: </span><%= @statement.month_ending.strftime("%B %d %Y") %></h5>
-
-<%= render partial: "shared/oho_errors_list", locals: { object: @statementi, errors: @statement.errors } %>
-
-<h3 class="mt-5 bg-dark-subtle text-center p-2">Revenues</h3>
-<div class="d-flex gap-4 justify-content-between align-items-stretch">
-  <table class="table table-striped table-sm table-hover align-middle w-auto">
-    <% @statement.revenues.group_by(&:section).each do |section, sections| %>
-      <thead>
-        <tr class="bg-secondary">
-          <th colspan="4"></th>
-          <th scope="col" class="text-end">Basis for charge</th>
-          <th scope="col" class="text-end ps-4">Factor</th>
-          <th scope="col" class="text-end ps-4">Due this month</th>
-          <th scope="col" class="text-center ps-4">Uploaded</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% sections.group_by(&:subsection).each do |subsection, details| %>
-          <tr class="bg-light">
-            <td colspan="8"><strong><%= subsection.upcase %></strong></td>
-          </tr>
-          <% details.each do |item| %>
-            <tr>
-              <td></td>
-              <td><%= item.detail %></td>
-              <td><%= item.month_due ? item.month_due.strftime("%B %Y") : "" %></td>
-              <td class="text-end"><%= item.basis %></td>
-              <td class="text-end"><%= number_to_currency(item.basis_for_charge) %></td>
-              <td class="text-end"><%= number_to_percentage(item.factor_or_rate*10000, precision: 0) %></td>
-              <td class="text-end"><%= number_to_currency(item.due_this_month) %></td>
-              <td class="text-start ps-4" style="max-height: 1rem; text-overflow: hidden">
-                <%= render partial: "detail_status", locals: { statement: @statement, item: item } %>
-              </td>
-            </tr>
-          <% end %>
-        <% end %>
-      <% end %>
-
-      </tbody>
-  </table>
-
+    <h4 class="text-secondary mt-3">Pragmatic Programmers LLC</h4>
+    <h5 class="text-secondary">Client Statement</h5>
+    <h5 class="mb-4"><span><span class="text-secondary">Month ending: </span><%= @statement.month_ending.strftime("%B %d %Y") %></h5>
+  </div>
   <div class="bg-secondary bg-gradient text-center align-self-center p-5">
     <%= bootstrap_form_with(model: @upload_files, url: upload_revenue_lines_royalties_ips_statement_path(@statement)) do |form| %>
       <div class="my-auto h-100">
-        <h4>Upload Revenue Files</h4>
+        <h4>Upload Details Files</h4>
 
 
-<div class="text-primary">Drop ls spreadsheets here</div>
-  <div class="text-primary" style="--bs-text-opacity: .5;">(one or more at a time)</div>
+        <div class="text-primary">Drop IPS spreadsheets here</div>
+        <div class="text-primary" style="--bs-text-opacity: .5;">(one or more at a time)</div>
 
         <div>
           <%= form.file_field :files, label: "&nbsp;".html_safe, multiple: true, accept: ".xlsx" %>
@@ -96,6 +59,45 @@ end
       </div>
   </div>
 </div>
+<%= render partial: "shared/oho_errors_list", locals: { object: @statement, errors: OhoError.for_object(@statement) } %>
+
+<h3 class="mt-5 bg-dark-subtle text-center p-2">Revenues</h3>
+<table class="table table-striped table-sm table-hover align-middle w-auto">
+  <% @statement.revenues.group_by(&:section).each do |section, sections| %>
+    <thead>
+      <tr class="bg-secondary">
+        <th colspan="4"></th>
+        <th scope="col" class="text-end">Basis for charge</th>
+        <th scope="col" class="text-end ps-4">Factor</th>
+        <th scope="col" class="text-end ps-4">Due this month</th>
+        <th scope="col" class="text-center ps-4">Uploaded</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% sections.group_by(&:subsection).each do |subsection, details| %>
+        <tr class="bg-light">
+          <td colspan="8"><strong><%= subsection.upcase %></strong></td>
+        </tr>
+        <% details.each do |item| %>
+          <tr>
+            <td></td>
+            <td><%= item.detail %></td>
+            <td><%= item.month_due ? item.month_due.strftime("%B %Y") : "" %></td>
+            <td class="text-end"><%= item.basis %></td>
+            <td class="text-end"><%= number_to_currency(item.basis_for_charge) %></td>
+            <td class="text-end"><%= number_to_percentage(item.factor_or_rate*10000, precision: 0) %></td>
+            <td class="text-end"><%= number_to_currency(item.due_this_month) %></td>
+            <td class="text-start ps-4" style="max-height: 1rem; text-overflow: hidden">
+              <%= render partial: "detail_status", locals: { statement: @statement, item: item } %>
+            </td>
+          </tr>
+        <% end %>
+      <% end %>
+    <% end %>
+
+    </tbody>
+</table>
+
 
 <h3 class="mt-5 text-center bg-dark-subtle p-2">Expenses</h3>
 <table class="table table-striped table-sm table-hover align-middle w-auto">
