--- a/app/views/royalties/ips/statements/_detail_line.html.erb
+++ b/app/views/royalties/ips/statements/_detail_line.html.erb
@@ -7,15 +7,11 @@
 <%##  type                      :string(255)%>
 <%##  value                     :decimal(8, 2)%>
 <tr class="border-secondary">
-  <td><%= line.date %></td>
-  <td><%= line.type %></td>
-  <td><%= line.sku.sku %><br/><span class="small"><%= line.ean %></span></td>
-  <td class="border-start border-secondary"><%= line.hq_account_no %></td>
-  <td><%= line.headquarter %><br/> <span class="small"><%= line.sl_city %> <br/> <%= line.sl_state %></span></td>
-  <td><%= line.invoice_or_credit_memo_no %></td>
-  <td><%= line.customer_po_or_claim_no %></td>
-  <td class="border-start border-secondary"><%= line.qty %></td>
-  <td class="text-end"><%= number_to_currency(line.list_amount) %></td>
-  <td class="text-end"><%= number_to_percentage(line.customer_discount, precision: 0) %></td>
-  <td class="text-end"><%= number_to_currency(line.value) %></td>
-</tr>
+  <td>
+    <%= line.sku.sku %><br/>
+    <span class="small"><%= line.ean %></span>
+  </td>
+  <td class="text-end"><%= line.quantity %></td>
+  <td class="text-end border-end border-secondary ps-3"><%= number_to_currency(line.amount) %></td>
+  <%= render partial: "detail_line_content-#{@content_type}", locals: { content: line.from_json } %>
+ </tr>
