--- a/app/views/royalties/ips/statements/_detail_status.html.erb
+++ b/app/views/royalties/ips/statements/_detail_status.html.erb
@@ -1,10 +1,13 @@
 <div id="<%= dom_id(item, :status) %>">
-  <% if item.uploaded_at? %>
+  <% if item.ready_to_import? %>
     <div style="max-height: 1rem; position: relative; top: -.7rem;" class="p-0">
-      <span title="Revenue lines uploaded for this item">
-        <i class="bi bi-check-circle-fill text-success fs-4"></i>
-        <%= link_to detail_royalties_ips_statement_path(statement, item), class: "info-link" do %>
-          <i class="bi bi-eye-fill fs-4"></i>
+      <span title="This detail is ready to be imported">
+        <i class="bi bi-check-circle text-success fs-4"></i>
+
+        <% if item.uploaded_at? %>
+          <%= link_to detail_royalties_ips_statement_path(statement, item), class: "info-link ps-4" do %>
+            <i title="View individual line items" class="bi bi-eye fs-4"></i>
+          <% end %>
         <% end %>
       </span>
     <% else %>
